@@ -1,6 +1,6 @@
 /*****************************************************************************
 
- @(#) $RCSfile: strMIB.c,v $ $Name:  $($Revision: 0.9.2.3 $) $Date: 2007/10/15 06:47:50 $
+ @(#) $RCSfile: strMIB.c,v $ $Name:  $($Revision: 0.9.2.4 $) $Date: 2007/10/15 17:21:27 $
 
  -----------------------------------------------------------------------------
 
@@ -45,11 +45,14 @@
 
  -----------------------------------------------------------------------------
 
- Last Modified $Date: 2007/10/15 06:47:50 $ by $Author: brian $
+ Last Modified $Date: 2007/10/15 17:21:27 $ by $Author: brian $
 
  -----------------------------------------------------------------------------
 
  $Log: strMIB.c,v $
+ Revision 0.9.2.4  2007/10/15 17:21:27  brian
+ - SNMP updates
+
  Revision 0.9.2.3  2007/10/15 06:47:50  brian
  - update to SNMP agent build
 
@@ -61,10 +64,10 @@
 
  *****************************************************************************/
 
-#ident "@(#) $RCSfile: strMIB.c,v $ $Name:  $($Revision: 0.9.2.3 $) $Date: 2007/10/15 06:47:50 $"
+#ident "@(#) $RCSfile: strMIB.c,v $ $Name:  $($Revision: 0.9.2.4 $) $Date: 2007/10/15 17:21:27 $"
 
 static char const ident[] =
-    "$RCSfile: strMIB.c,v $ $Name:  $($Revision: 0.9.2.3 $) $Date: 2007/10/15 06:47:50 $";
+    "$RCSfile: strMIB.c,v $ $Name:  $($Revision: 0.9.2.4 $) $Date: 2007/10/15 17:21:27 $";
 
 /* This file was generated by mib2c and is intended for use as
    a mib module for the ucd-snmp snmpd agent. */
@@ -92,7 +95,7 @@ static char const ident[] =
 /* This one is the other way around: it is just fine for net-snmp, but
  * ucd-snmp does not provide the header file at all.  */
 #if defined HAVE_LIBNETSNMP
-#include <ucd-snmp/mib_modules.h>
+#include <net-snmp/agent/mib_modules.h>
 #else				/* defined HAVE_LIBNETSNMP */
 #include "mib_modules.h"
 #endif				/* defined HAVE_LIBNETSNMP */
